modules/015-admission-policy-engine/charts/constraint-templates/tests/dns-policy/allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed
  namespace: default
spec:
  containers:
    - name: nginx
      image: nginx
  hostNetwork: true
  dnsPolicy: ClusterFirstWithHostNet
